--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: rgb(245, 248, 248);
 }
 .backhead{
-    background-color: rgb(37, 78, 56);
+    background-color: rgb(50, 150, 96);
     margin: -15px;
     padding-top: 10px;
     padding-bottom: 5px;
@@ -11,16 +11,18 @@ body {
 
  .backhead > img{
     padding-left: 30px;
-    padding-top: 12px;
-    width:45px;
-    height: 35px;
+    padding-top: 18px;
+    width:40px;
+    height:25px;
     float: left;
 } 
 .logo {
-  color: rgb(255, 242, 227);
+  color: rgb(250, 238, 216);
   text-align: center;
+  text-shadow: teal;
+  box-shadow: teal;
   font-family: 'Langar', cursive;
-  font-size: 40px;
+  font-size: 35px;
  /*  padding-right: 95px; */
 }
 
@@ -31,7 +33,7 @@ body {
   padding-right: 50px;
   padding-top: 18px;
   font-family: 'Langar', cursive;
-  font-size: 20px;
+  font-size: 15px;
   float: right; 
 }
 .login >a{
@@ -49,14 +51,73 @@ color: white;
 
 /* mouse over link */
 .login >a:hover {
-  color: rgb(163, 118, 141);
+  color: rgb(241, 181, 212);
 }
+
 .place1
 {
   padding-top: 22px;
 }
 
 .place1 > img{
-  width: auto;
+  display: block;
+  max-width: 75%;
+  width:fit-content;
+  margin-left: auto;
+  margin-right: auto;
   
 }
+
+.place2
+{
+  padding-top: 10px;
+}
+
+.place2 > img{
+  display: block;
+  max-width: 100%;
+  width:fit-content;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 550px) {
+  .column {
+    width: 100%;
+  }
+  .logo {
+    font-size: 15px;
+    padding-top: 4px;
+  }
+  .logo>.login{
+    font-size: 7.5px;
+    padding-top: 5px;
+    padding-right: 20px;
+  }
+  .backhead>img{
+    width:27px;
+    height: 15px;
+    padding-top: 8px;
+    padding-left:20px ;
+  }
+}
+
+.column {
+  float: left;
+  width: 150px;
+  max-width: 150px;
+  height: 100px;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+/* * {
+  box-sizing: border-box;
+} */
