--- a/body.css
+++ b/body.css
@@ -1,3 +1,6 @@
+/* *{
+    background-color:#97d88e;
+} */
 /* header */
 header{
     font-family: 'Fira Sans', sans-serif;
@@ -132,19 +135,71 @@ input[type=text]{
     background-color:none;
     color: #fff;
     height:75px;
-    padding:10px;
+    padding-top:10px;
+    padding-left: 10px;
+    padding-right: 10px;
     display: grid;
     grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     text-align: center;
     font-family: 'Balsamiq Sans', cursive;
-    grid-gap:36px ;
+    grid-gap:30px ;
+    
 }
 
 .cat{
     padding-top:28px;
-    background-color:#959df3;
-    text-shadow: 2px 2px 2px #757bbe;
+    background-color:#7379c4;
+    text-shadow: 2px 2px 2px #383c64;
     border-radius: 30px;
-    box-shadow:2px 2px 2px #757bbe ;
+    width:120px;
+    box-shadow:2px 2px 2px #303244 ;
     
+}
+
+.lay1{
+    background-color:none;
+    color: #edf7faf6;
+    height:250px;
+    padding:5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+    font-family: 'Balsamiq Sans', cursive;
+    grid-gap:36px ;
+    font-size: 25px;
+    margin-top: 30px;
+}
+
+.lay1in{
+    
+    padding-top:28px;
+    background-color:#e2d850;
+    text-shadow: 2px 2px 2px #1818156c;
+    border-radius: 30px;
+    box-shadow:2px 2px 2px #5a5647 ;
+}
+
+.pic img{
+    width:150px;
+    height: 150px;
+    padding: 2px;
+    background-color:white;
+    /* border-radius: 50%; */
+    /* padding-bottom: 5px; */
+    margin-bottom: 2px;
+    box-shadow:2px 2px 2px #686060;
+}
+.label{
+    /* padding-top: 15px; */
+    background-color: #943a9c;
+    margin: auto;
+    /* margin: -1px; */
+    max-width:55%;
+    padding: 10px;
+    text-align: center;
+    border-radius: 30px;
+    letter-spacing: 2px;
+    box-shadow:2px 2px 2px #47214b ;
 }
