--- a/body.css
+++ b/body.css
@@ -1,6 +1,6 @@
-/* *{
-    background-color:#97d88e;
-} */
+body{
+    background-color:#d7ffeb57;
+}
 /* header */
 header{
     font-family: 'Fira Sans', sans-serif;
@@ -44,10 +44,14 @@ header a:hover, a:active{
     display: grid;
     padding: 10px;
     overflow: hidden;
-    margin: -10px;
+    margin: 10px;
+    margin-top: -10px;
     grid-template-columns: 89px 8fr 12fr 4fr 4fr;
     grid-column-gap: 20px;
     margin-bottom: 10px;
+    height:50px;
+    margin-left: -10px;
+    margin-right:-8px;
 }
 
 
@@ -143,22 +147,26 @@ input[type=text]{
     text-align: center;
     font-family: 'Balsamiq Sans', cursive;
     grid-gap:30px ;
-    
+    margin-bottom: 10px;
 }
-
+.categs a{
+    color: #fff;
+}
 .cat{
-    padding-top:28px;
+    padding-top:25px;
     background-color:#7379c4;
     text-shadow: 2px 2px 2px #383c64;
     border-radius: 30px;
     width:120px;
+    height:40px;
     box-shadow:2px 2px 2px #303244 ;
     
 }
 
+
 .lay1{
     background-color:none;
-    color: #edf7faf6;
+    color: #fffffff6;
     height:250px;
     padding:5px;
     padding-left: 10px;
@@ -169,13 +177,13 @@ input[type=text]{
     font-family: 'Balsamiq Sans', cursive;
     grid-gap:36px ;
     font-size: 25px;
-    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .lay1in{
     
     padding-top:28px;
-    background-color:#e2d850;
+    background-color:#f8ef72;
     text-shadow: 2px 2px 2px #1818156c;
     border-radius: 30px;
     box-shadow:2px 2px 2px #5a5647 ;
@@ -186,6 +194,7 @@ input[type=text]{
     height: 150px;
     padding: 2px;
     background-color:white;
+    border-radius: 10px;
     /* border-radius: 50%; */
     /* padding-bottom: 5px; */
     margin-bottom: 2px;
@@ -196,10 +205,67 @@ input[type=text]{
     background-color: #943a9c;
     margin: auto;
     /* margin: -1px; */
-    max-width:55%;
-    padding: 10px;
+    max-width:60%;
+    height: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     text-align: center;
     border-radius: 30px;
     letter-spacing: 2px;
     box-shadow:2px 2px 2px #47214b ;
+}
+
+.topic{
+    font-family: 'Balsamiq Sans', cursive;
+    font-size: 25px;
+    padding-left:20px;
+    padding-top: 15px;
+    letter-spacing: 1.5px;
+}
+
+.ess{
+    background-color:none;
+    color: #edf0f5;
+    height:auto;
+    /* max-width:80%; */
+    padding:5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+    font-family: 'Balsamiq Sans', cursive;
+    grid-column-gap:36px ;
+    grid-row-gap:25px;
+    font-size: 24px;
+}
+.flow{
+    padding-top: 22px;
+    background-color:rgb(182, 31, 136);
+    box-shadow:2px  2px 2px rgb(77, 70, 70);
+    border-radius:10px;
+    text-shadow: 2px 2px 2px #54554c;
+    margin-bottom:
+}
+
+.flow img {
+    width:200px;
+    height:200px;
+    border-radius: 10px;
+    margin-bottom: 2px;
+    box-shadow:2px 2px 2px #54554c;
+    /* position: absolute;; */
+    /* clip:rect(0,100px,100px,0); */
+}
+.labeless{
+    background-color:rgb(148, 99, 194);
+    margin:auto;
+    max-width:65%;
+    margin-bottom: 15px;
+    height:30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 50px;
+    letter-spacing: 1px;
+    box-shadow:2px 2px 2px #1c1d1a;
 }
