--- a/final.css
+++ b/final.css
@@ -120,10 +120,12 @@ header a:hover, a:active{
     padding-top: 02px;
     padding-left: 02px;
     
-    background-color:#f0f0f0;
+    /* background-color:#f0f0f0; */
     margin-top: 0px;
-    margin-left: -48px;
-    clip-path: circle(21px);
+    margin-left: -50px;
+    border-radius:25%;
+    /* box-shadow: 2px 2px 2px black; */
+    /* clip-path: circle(21px); */
     /* border-top-right-radius: 50%;
     border-bottom-right-radius: 50%; */
 }
@@ -141,12 +143,17 @@ input[type=text]{
     font-size:150%;
     /* border-top-right-radius: 50px;
     border-bottom-right-radius: 50px; */
-    border-radius: 50px;
+    /* border-bottom-left-radius: 50px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px; */
     /* padding-left: 2%;
     padding-top: ; */
+    border-radius: 50px;
     padding:2px 20px;
     /* box-shadow: 2px 2px 2px #303244; */
-    border: 2px solid rgb(61, 61, 61);
+    border: 2px solid #3d3d3d;
+    /* border-bottom: 2px solid #3d3d3d; */
 }
 
 /* body */
